# dtviz

./: .gitignore  Makefile  README.rst  pyproject.toml  requirements.pip.txt
dtviz/: decoder.py
playground/: .gitignore  env.sh  run.sh
schemas_json/: main.yaml
src_doit/: __init__.py
