[project]
name = "dtviz"
version = "0.2.3"
description = "Dependency tree visualizer"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "GPLv3"}
dependencies = [
    "dependency-groups >=1.3.1",
    "hat-json ~=0.6.8",
    "packaging ~=26.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
Repository = "https://github.com/bozokopic/dtviz.git"

[project.scripts]
dtviz = "dtviz.main:main"

[dependency-groups]
run = [
    "dependency-groups >=1.3.1",
    "hat-json ~=0.6.8",
    "packaging ~=26.0",
]
build = [
    "mkwhl ~=0.3.2"
]
dev = [
    {include-group = "run"},
    {include-group = "build"},
]

[build-system]
requires = ["mkwhl ~=0.3.2"]
build-backend = "mkwhl"

[tool.mkwhl]
src-dir = '.'
src-include-patterns = ["dtviz/**/*"]
